--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,113 @@
+:root {
+  --base-color: #fff;
+  --accent-color: #f97068;
+  --neutral-100-color: #dce0eb;
+  --neutral-300-color: #6d7488;
+  --neutral-500-color: #212738;
+  --neutral-700-color: #0c1121;
+  --neutral-900-color: #040917;
+}
+
 body {
-    background-color: skyblue;
+  min-height: 100vh;
+}
+
+h1,
+h2,
+h3 {
+  font-family: "Inter", sans-serif;
+}
+
+.title-dark {
+  color: var(--neutral-500-color);
+}
+
+.title-light {
+  color: var(--neutral-100-color);
+}
+
+.text-dark {
+  color: var(--neutral-900-color);
+}
+
+.text-light {
+  color: var(--neutral-100-color);
+}
+
+.meta-dark {
+  color: var(--neutral-700-color);
+}
+
+.meta-light {
+  color: var(--neutral-300-color);
+}
+
+.btn-primary {
+  background-color: var(--neutral-500-color);
+  border-color: var(--neutral-500-color);
+}
+
+.center {
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+}
+
+.spacer {
+  width: 100%;
+  height: 2rem;
+}
+
+a {
+  text-decoration: none;
+  color: var(--accent-color);
+  font-weight: 500;
+}
+
+.page-title {
+  font-size: 4rem;
+  text-transform: uppercase;
+  font-weight: 600;
+  text-decoration: underline;
+  text-align: center;
+  letter-spacing: -0.3rem;
+}
+
+.form-control {
+  border-radius: 0;
+  border: 2px solid var(--neutral-900-color);
+}
+
+select.form-control {
+  background-image: linear-gradient(
+      45deg,
+      transparent 50%,
+      var(--neutral-900-color) 50%
+    ),
+    linear-gradient(135deg, var(--neutral-900-color) 50%, transparent 50%);
+  background-position: calc(100% - 20px) calc(1em + 2px),
+    calc(100% - 15px) calc(1em + 2px), calc(100% - 2.5em) 0.5em;
+  background-size: 5px 5px, 5px 5px, 1px 1.5em;
+  background-repeat: no-repeat;
+}
+
+label,
+.btn,
+option,
+select,
+input[type="text"] {
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: -0.05rem;
+}
+
+.btn-lg {
+  border-radius: 0;
+  padding: 1rem 2rem;
+}
+
+.bar {
+  width: 100%;
+  height: 4px;
+  background-color: #000;
 }
