--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
 
-	{% include('/home/_marquee-text.html.twig') %}
+	{% include('/partials/_marquee-text.html.twig') %}
 
 	<div class="hero">
 		<div class="hero-text-dark">
@@ -29,7 +29,7 @@
 		</div>
 	</div>
 
-	{% include('/home/_marquee-text.html.twig') %}
+	{% include('/partials/_marquee-text.html.twig') %}
 
 	<div class="feature">
 		<div class="feature-video">
@@ -47,7 +47,8 @@
 		</div>
 	</div>
 
-	{% include('/home/_marquee-icons.html.twig') %}
+	{% include('/partials/_marquee-icons.html.twig') %}
+
 
 	<div class="feature">
 		<div class="feature-text feature-even">
@@ -66,7 +67,8 @@
 		</div>
 	</div>
 
-	{% include('/home/_marquee-icons.html.twig') %}
+	{% include('/partials/_marquee-icons.html.twig') %}
+
 
 	<div class="feature">
 		<div class="feature-video">
@@ -94,7 +96,8 @@
 	</div>
 
 	<div class="spacer"></div>
-	{% include('/home/_marquee-text.html.twig') %}
+	{% include('/partials/_marquee-text.html.twig') %}
+
 	<div class="spacer"></div>
 
 
