--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,18 +10,20 @@
 		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>"> {% block stylesheets %}{% endblock %}
 
 		{% block javascripts %}
+			<script src="https://kit.fontawesome.com/b3e17d2f75.js" crossorigin="anonymous" defer></script>
+
 			{% block importmap %}
 				{{ importmap('app') }}
 			{% endblock %}
 		{% endblock %}
 	</head>
 	<body>
-		{% include('_header.html.twig') %}
+		{% include('partials/_header.html.twig') %}
 
 		<main class="mt-auto mb-auto"> {% block body %}{% endblock %}
 			</main>
 
-			{% include('_footer.html.twig') %}
+			{% include('partials/_footer.html.twig') %}
 
 		</body>
 	</html>
