--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -34,7 +34,7 @@
 						<a href="{{ path('app_accessibility') }}">Politique d'accessibilité</a>
 					</li>
 					<li>
-						<a href="{{ path('app_confidentiality') }}">Politique de confidentialité</a>
+						<a href="{{ path('app_privacy') }}">Politique de confidentialité</a>
 					</li>
 					<li>Nos partenaires</li>
 					<li>Plan du site</li>
