--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -32,7 +32,7 @@
 						</li>
 					{% else %}
 						<li class="nav-item">
-							<a class="nav-link" href="#">S'inscrire</a>
+							<a class="nav-link" href="{{ path('app_register') }}">S'inscrire</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#">Se Connecter</a>
