--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -28,14 +28,14 @@
 							<a class="nav-link" href="#">Mon compte</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Se déconnecter</a>
+							<a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
 						</li>
 					{% else %}
 						<li class="nav-item">
 							<a class="nav-link" href="{{ path('app_register') }}">S'inscrire</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Se Connecter</a>
+							<a class="nav-link" href="{{ path('app_login') }}">Se Connecter</a>
 						</li>
 					{% endif %}
 				</ul>
