--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -95,7 +95,7 @@ label,
 .btn,
 option,
 select,
-input[type="text"] {
+input {
   text-transform: uppercase;
   font-weight: 600;
   letter-spacing: -0.05rem;
