--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -38,6 +38,8 @@
 				<button class="btn btn-lg btn-primary" type="submit">
 					Se connecter
 				</button>
+
+				<a href="{{ path('app_forgot_password_request') }}">Mot de passe oublié ?</a>
 			</div>
 		</form>
 	</div>
