Added upload and update of documents

--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -11,13 +11,14 @@
 			<div class="collapse navbar-collapse" id="navbarsExample07XL">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-3">
 					<li class="nav-item">
-						<a class="nav-link" href="#">
+						<a class="nav-link" href="{{ path('document_search') }}">
 							<i class="fa-duotone fa-magnifying-glass me-2"></i>Chercher un document</a>
 
 					</li>
 					{% if app.user %}
 						<li class="nav-item">
-							<a class="nav-link" href="#">
+							<a class="nav-link" href="{{ path('document_add') }}">
+
 								<i class="fa-duotone fa-upload me-2"></i>Déposer un document</a>
 
 						</li>
