Added user documents handling

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -95,7 +95,8 @@ label,
 .btn,
 option,
 select,
-input {
+input,
+legend {
   text-transform: uppercase;
   font-weight: 600;
   letter-spacing: -0.05rem;
