--- a/templates/document/search.html.twig
+++ b/templates/document/search.html.twig
@@ -7,15 +7,25 @@
 		<h1 class="page-title">Rechercher un document</h1>
 
 		{{ form_start(form) }}
-		{{ form_row(form.type) }}
-		{{ form_row(form.level) }}
-		{{ form_row(form.subject) }}
-		{{ form_row(form.theme) }}
-		{{ form_row(form.title) }}
-
-		<div class="offset-lg-3 d-flex flex-column align-items-center">
-			{{ form_row(form.submit) }}
+		{{ form_row(form.type, {'attr': {'class': 'd-flex gap-5'}}) }}
+		<div class="row">
+			<div class="col">
+				{{ form_row(form.level)}}
+			</div>
+			<div class="col">
+				{{ form_row(form.subject)}}
+			</div>
+			<div class="col">
+				{{ form_row(form.theme)}}
+			</div>
+		</div>
+		<div class="mb-3">
+			{{ form_widget(form.title)}}
+		</div>
+		<div class="d-flex flex-column align-items-center">
+			<button type="submit" class="btn btn-lg btn-primary">Rechercher un document</button>
 		</div>
 		{{ form_end(form) }}
+
 	</div>
 {% endblock %}
