Added documents deletion

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -21,9 +21,9 @@
 			{% endif %}
 
 			<label for="username">Email</label>
-			<input type="email" value="{{ last_username }}" name="_username" id="username" class="form-control my-3" autocomplete="email" required autofocus>
+			<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control my-3" autocomplete="email" required autofocus>
 			<label for="password">Mot de passe</label>
-			<input type="password" name="_password" id="password" class="form-control my-3" autocomplete="current-password" required>
+			<input type="password" name="password" id="inputPassword" class="form-control my-3" autocomplete="current-password" required>
 
 			<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
