adding ratings and comments

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,8 @@
 
 		{% block javascripts %}
 			<script src="https://kit.fontawesome.com/b3e17d2f75.js" crossorigin="anonymous" defer></script>
+			<script src="{{ asset('js/downloads_update.js') }}" crossorigin="anonymous" defer></script>
+			<script src="{{ asset('js/rating.js') }}" crossorigin="anonymous" defer></script>
 
 			{% block importmap %}
 				{{ importmap('app') }}
