--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -78,6 +78,10 @@ a {
   border: 2px solid var(--neutral-900-color);
 }
 
+.borders {
+  border: 2px solid var(--neutral-900-color);
+}
+
 select.form-control {
   background-image: linear-gradient(
       45deg,
@@ -99,6 +103,14 @@ legend {
   text-transform: uppercase;
   font-weight: 600;
   letter-spacing: -0.05rem;
+}
+
+.filter-label {
+  text-transform: uppercase;
+  font-weight: 400;
+  letter-spacing: -0.05rem;
+  margin-bottom: -1rem;
+  font-size: 0.8rem;
 }
 
 .btn-lg {
